<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.RegistrationFragment">

    <View
        android:id="@+id/bg_main"
        android:layout_width="360dp"
        android:layout_height="570dp"
        android:background="@drawable/start_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorisation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textColor="#5a5a5a"
        android:text="@string/registration_textview"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_name_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_main"
        app:layout_constraintBottom_toTopOf="@+id/ll_surname_edittext_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edittext_register"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:background="@drawable/input_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/input_name_hint"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_surname_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_name_edittext_register"
        app:layout_constraintBottom_toTopOf="@id/ll_patronymic_edittext_register"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_edittext_register"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:background="@drawable/input_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/input_surname_hint"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_patronymic_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_surname_edittext_register"
        app:layout_constraintBottom_toTopOf="@id/ll_phone_edittext_register"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patronymic_edittext_register"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:background="@drawable/input_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/input_patronymic_hint"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_phone_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_patronymic_edittext_register"
        app:layout_constraintBottom_toTopOf="@id/ll_email_edittext_register"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edittext_register"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:background="@drawable/input_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/input_phone_hint"
            android:inputType="phone"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_email_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_phone_edittext_register"
        app:layout_constraintBottom_toTopOf="@id/ll_password_edittext_register"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext_register"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:background="@drawable/input_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_password_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_email_edittext_register"
        app:layout_constraintBottom_toTopOf="@id/ll_phone_edittext_register"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext_register"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:background="@drawable/input_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/input_password_hint"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/inter"
        android:text="@string/sign_up_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/to_auth_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_password_edittext_register" />


    <TextView

        android:id="@+id/to_auth_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter"
        android:text="@string/have_account"
        android:textColor="#000000"
        android:textColorLink="#0000FF"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        app:layout_constraintEnd_toEndOf="@id/bg_main"
        app:layout_constraintStart_toStartOf="@id/bg_main"
        app:layout_constraintBottom_toBottomOf="@id/bg_main" />


</androidx.constraintlayout.widget.ConstraintLayout>