<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".presentation.fragments.LoginFragment">

    <View
        android:id="@+id/bg_main"
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:background="@drawable/start_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorisation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/authorization_textview"
        android:textStyle="bold"
        android:textColor="#5a5a5a"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_email_address_edittext">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edittext"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:autofillHints="password"
        android:background="@drawable/input_text_bg"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ll_email_address_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ll_password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_main"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="LabelFor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_edittext"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_text_bg"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/inter"
        android:text="@string/sign_in_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_password_edittext" />

    <TextView

        android:id="@+id/to_register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inter"
        android:text="@string/have_no_account"
        android:textColor="#000000"
        android:textColorLink="#0000FF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/bg_main"
        app:layout_constraintStart_toStartOf="@id/bg_main"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>