<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.RegistrationFragment">

    <View
        android:id="@+id/bg_main"
        android:layout_width="360dp"
        android:layout_height="600dp"
        android:background="@drawable/start_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/authorisation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/appointment_label"
        android:textColor="#5a5a5a"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/doctor_label"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:text="@string/choose_doctor"
        android:textAlignment="center"
        android:textColor="@color/black"


        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/doctor"
        app:layout_constraintEnd_toEndOf="@+id/bg_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorisation_textView" />

    <Spinner
        android:id="@+id/doctor"
        app:layout_constraintStart_toEndOf="@id/doctor_label"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        app:layout_constraintEnd_toEndOf="@id/date_label"
        app:layout_constraintStart_toStartOf="@id/date_label"
        app:layout_constraintTop_toBottomOf="@id/doctor_label"
        app:layout_constraintBottom_toTopOf="@id/date_label"/>

    <TextView
        android:id="@+id/date_label"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:text="@string/choose_date"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/calendarView"
        app:layout_constraintEnd_toEndOf="@id/bg_main"
        app:layout_constraintStart_toStartOf="@id/bg_main"
        app:layout_constraintTop_toBottomOf="@id/doctor" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="325dp"
        android:layout_height="289dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_appointment_button"
        app:layout_constraintTop_toBottomOf="@id/date_label" />

    <Button
        android:id="@+id/add_appointment_button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/inter"
        android:text="@string/add_appointment"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_main"
        app:layout_constraintEnd_toEndOf="@id/bg_main"
        app:layout_constraintStart_toStartOf="@id/bg_main"
        app:layout_constraintTop_toBottomOf="@id/calendarView" />





</androidx.constraintlayout.widget.ConstraintLayout>